make some modification to support to check guest I/O rate limits in parallel. Signed-off-by: Zhiyong Wu <wuzhy@vnet.linux.ibm.com>

--- a/client/tests/kvm/tests_base.cfg
+++ b/client/tests/kvm/tests_base.cfg
@@ -1,7 +1,8 @@
 # Copy this file to tests_base.cfg and edit it.
 #
 # Define the objects we'll be using
-vms = vm1
+#vms = vm1
+vms = "vm1 vm2 vm3 vm4"
 vm_type = kvm
 images = image1
 cdroms = cd1
@@ -218,6 +219,7 @@ variants:
     - disk_io:
         only Linux
         type = disk_io_limits
+	#vms += " vm2 vm3 vm4"
 
     - autotest:     install setup unattended_install.cdrom
         only Linux
